--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
 .App {
+  background-color: #282c34;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  min-height:100vh;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: rgb(71, 147, 218);
+  font-size: 38px;
+}
+.App-body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   color: white;
+  height: 150px;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.App-select {  
+  margin: 30px auto;
+  background-color: #282c34;
+  width: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-select input {  
+  padding-right: 0 !important;
+  justify-content: flex-end !important;
+  margin-left: -5px;
 }
+
+.App-cesarKey {
+  color: white;
+  width: 6%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+}
+
+.App-vernamKey, .App-vigenereKey {
+  color: white;
+  margin: 20px 0
+}
+
+.App-playfairKey {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+}
+
+.App-buttons {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: space-around;
+  width: 30%;
+}
+
+
+.App-result {
+  display: flex;
+  flex-direction: column;
+  justify-content: 'center';
+  align-items: center;
+  margin: 32px auto;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  width: 50%;
+  background-color: #333a47;
+  color: #fff;
+  min-height: 120px;  
+}
+
+
+
