--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,9 @@
   width: 50%;
   background-color: #333a47;
   color: #fff;
-  min-height: 120px;  
+  min-height: 120px;
+  word-break: break-all;
+  padding: 0 20px;
 }
 
 
